--- a/2. Paint/paint.html
+++ b/2. Paint/paint.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pong</title>
+    <title>Paint</title>
     <script src="paint.js"></script>
     <link rel="stylesheet" href="paint.css">
 </head>
@@ -12,19 +12,19 @@
     <hr id="line">
     <div class="grid-container">
         <div class="menu">
-            <input id="widthSlider" type=range min=0 max=10 value=50>
+            <input id="widthSlider" type=range min=1 max=10 value=1>
             <p>Line width: <span id="widthText"></span></p>
             <input type="button" value="Clear canvas" id="clearBtn">
             <div>
-                <input type="button" value="" style="background-color: blue; border-color: blue;">
-                <input type="button" value="" style="background-color: red; border-color: red;">
-                <input type="button" value="" style="background-color: green; border-color: green;">
-                <input type="button" value="" style="background-color: orange; border-color: orange;">
+                <button class="btnColor" id="blueBtn" type="button" value="blue" style="background-color: blue; border-color: blue;"></button>
+                <button class="btnColor" id="redBtn" type="button" value="red" style="background-color: red; border-color: red;"></button>
+                <button class="btnColor" id="greenBtn" type="button" value="green" style="background-color: green; border-color: green;"></button>
+                <button class="btnColor" id="orangeBtn" type="button" value="orange" style="background-color: orange; border-color: orange;"></button>
                 <br>
-                <input type="button" value="" style="background-color: purple; border-color: purple;">
-                <input type="button" value="" style="background-color: black; border-color: black;">
-                <input type="button" value="" style="background-color: pink; border-color: pink;">
-                <input type="button" value="" style="background-color: grey; border-color: grey;">
+                <button class="btnColor" id="purpleBtn" type="button" value="purple" style="background-color: purple; border-color: purple;"></button>
+                <button class="btnColor" id="blackBtn" type="button" value="black" style="background-color: black; border-color: black;"></button>
+                <button class="btnColor" id="pinkBtn" type="button" value="pink" style="background-color: pink; border-color: pink;"></button>
+                <button class="btnColor" id="greyBtn" type="button" value="grey" style="background-color: grey; border-color: grey;"></button>
             </div>
         </div>
         <div class="main">
