--- a/2. Paint/paint.html
+++ b/2. Paint/paint.html
@@ -16,15 +16,15 @@
             <p>Line width: <span id="widthText"></span></p>
             <input type="button" value="Clear canvas" id="clearBtn">
             <div>
-                <button class="btnColor" id="blueBtn" type="button" value="blue" style="background-color: blue; border-color: blue;"></button>
-                <button class="btnColor" id="redBtn" type="button" value="red" style="background-color: red; border-color: red;"></button>
-                <button class="btnColor" id="greenBtn" type="button" value="green" style="background-color: green; border-color: green;"></button>
-                <button class="btnColor" id="orangeBtn" type="button" value="orange" style="background-color: orange; border-color: orange;"></button>
+                <button class="btnColor" id="blueBtn" type="button" value="blue"></button>
+                <button class="btnColor" id="redBtn" type="button" value="red"></button>
+                <button class="btnColor" id="greenBtn" type="button" value="green"></button>
+                <button class="btnColor" id="orangeBtn" type="button" value="orange"></button>
                 <br>
-                <button class="btnColor" id="purpleBtn" type="button" value="purple" style="background-color: purple; border-color: purple;"></button>
-                <button class="btnColor" id="blackBtn" type="button" value="black" style="background-color: black; border-color: black;"></button>
-                <button class="btnColor" id="pinkBtn" type="button" value="pink" style="background-color: pink; border-color: pink;"></button>
-                <button class="btnColor" id="greyBtn" type="button" value="grey" style="background-color: grey; border-color: grey;"></button>
+                <button class="btnColor" id="purpleBtn" type="button" value="purple"></button>
+                <button class="btnColor" id="blackBtn" type="button" value="black"></button>
+                <button class="btnColor" id="pinkBtn" type="button" value="pink"></button>
+                <button class="btnColor" id="greyBtn" type="button" value="grey"></button>
             </div>
         </div>
         <div class="main">
