--- a/Examen 1/pyramid.html
+++ b/Examen 1/pyramid.html
@@ -7,8 +7,8 @@
 
     <script src="../libs/gl-matrix/gl-matrix.js"></script>
     
-    <!-- <script src="pyramid.js"></script> -->
-    <script src="piramid.js"></script>
+    <script src="pyramid.js"></script>
+    <!-- <script src="piramid.js"></script> -->
 </head>
 <body onload="main()">
     <canvas id="pyramidCanvas" width="800" height="600" style="border: black; border-style: solid;"></canvas>
