--- a/6. Satelites/satelites.html
+++ b/6. Satelites/satelites.html
@@ -19,7 +19,7 @@
 		<div id="sliderContainer">
             <br>
 			<input type="button" value="Add Element" onclick="addElement()">
-            <input type="button" value="Add Satelite" onclick="addSatelite()">
+            <input type="button" value="Add Satellite" onclick="addSatellite()">
             <input type="button" value="Reset" onclick="resetCanvas()">
 		</div>
 	</body>
