--- a/7. solar system/solar_system.html
+++ b/7. solar system/solar_system.html
@@ -4,21 +4,15 @@
 		<title>Solar System ThreeJS</title>
 
 		<script src="../libs/three.js/three.js"></script>
-
+		<script src="../libs/three.js/controls/OrbitControls.js"></script>
 		<script src="solar_system.js"></script>
 
 	</head>
 	<body onload="main()"> 
 		<div id="container">
             <h2>Three.js Satelite</h2>
-			<canvas id="webglcanvas" width=800 height=600 style="background-color: black;"></canvas>
+			<canvas id="webglcanvas" width=1880 height=880 style="background: url('../images/solar_system/stars/stars.jpg')"></canvas>
 		</div>
-		<!-- <div id="sliderContainer">
-            <br>
-			<input type="button" value="Add Element" onclick="addElement()">
-            <input type="button" value="Add Satellite" onclick="addSatellite()">
-            <input type="button" value="Reset" onclick="resetCanvas()">
-		</div> -->
 	</body>
 
 </html>
